--- a/FMML_day00.ipynb
+++ b/FMML_day00.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "FMML day00.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMBkV261XHCLdi5/epD8xmV",
+      "authorship_tag": "ABX9TyPCIkWsqnLAVlllN4O3z6gp",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,28 +29,28 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 8,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "OKqN1WaNkKf8",
-        "outputId": "cbf8d763-2869-4a37-e937-d69b149cb38b"
+        "outputId": "4d8d21d4-bf76-4e49-b1eb-e680896b1a5d"
       },
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "8"
+              "False"
             ]
           },
           "metadata": {},
-          "execution_count": 1
+          "execution_count": 8
         }
       ],
       "source": [
-        "3 + 5\n"
+        "2<3 == 4<5 #parenthesis\n"
       ]
     },
     {
@@ -65,7 +65,7 @@
         "id": "xrN8uyVNorfR",
         "outputId": "b08bcc3e-7dfd-45b3-f5ba-ebcb5f6b64e2"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -82,16 +82,96 @@
     {
       "cell_type": "code",
       "source": [
-        "15*0.65"
+        "-3 **2 #parenthesis"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "LSCMofG-q4bJ",
-        "outputId": "7fee228f-74be-4af1-8ad7-5a0a52371007"
+        "outputId": "4ca9e4e3-9125-4567-ec67-516486071e3e"
       },
-      "execution_count": 5,
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "-9"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 11
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "(-3) **2"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "nD6uCJX4AcZp",
+        "outputId": "185cbbd2-3702-49e5-bc82-d3902e2c8135"
+      },
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "9"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 10
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "-3*-2"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "SU82oLzYAkv0",
+        "outputId": "a08dee88-d588-4433-dbd7-05b364e15acf"
+      },
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "6"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 12
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def mileage_calculator(mileage, fuel, cash):  #Mileage Calculator\n",
+        "  return (cash/fuel*mileage)\n",
+        "mileage_calculator(15, 100, 65)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "-fWYo1Pi-wJm",
+        "outputId": "df1a213a-8fbd-4b7e-bb35-543b59afc346"
+      },
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -101,20 +181,37 @@
             ]
           },
           "metadata": {},
-          "execution_count": 5
+          "execution_count": 13
         }
       ]
     },
     {
       "cell_type": "code",
       "source": [
-        "#ca"
+        ""
       ],
       "metadata": {
-        "id": "O463sZKkrGGm"
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 165
+        },
+        "id": "GkXeLObE_NjP",
+        "outputId": "c0ba218d-7ca2-4182-db2a-38e032373168"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "NameError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-2-86309f9b9c8a>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mmileage_calculator\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m15\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m100\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m65\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m: name 'mileage_calculator' is not defined"
+          ]
+        }
+      ]
     }
   ]
 }
